[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qualgent"
version = "0.1.0"
description = "QA Agent for Mobile Apps using ADB + Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
qualgent = "qualgent.agent.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

